Bug 400423 - No warning when creating conflicting directory
Summary: No warning when creating conflicting directory
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: triaged, usability
: 355594 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-28 15:49 UTC by retired
Modified: 2019-01-09 18:12 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.54
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description retired 2018-10-28 15:49:46 UTC
SUMMARY
When creating directory which already exists dolphin does nothing, it should warn user and propose alternative name.

STEPS TO REPRODUCE
1. Create test directory.
2. Try to create another one with same name.
OBSERVED RESULT

No warning is given, after confirming name nothing happens.


EXPECTED RESULT

Dolphin should give user a warning and propose different name.


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION

Linux 4.18 Arch
Locale set to pl_PL
Comment 1 Julian Steinmann 2018-10-28 21:09:50 UTC
Can confirm.

SYSTEM INFO
KDE neon Developer Edition
KDE-Plasma-Version: 5.14.2
KDE-Frameworks-Version: 5.52.0
Qt-Version: 5.11.2
Comment 2 Nate Graham 2018-10-29 20:31:40 UTC
Might be in KIO. Need to investigate.
Comment 3 Nate Graham 2018-12-16 01:02:00 UTC
It's in KIO, in knewfilemenu.cpp. Moving there.
Comment 4 Nate Graham 2018-12-16 03:01:34 UTC
Here's a patch: https://phabricator.kde.org/D17617
Comment 5 Nate Graham 2019-01-01 23:29:33 UTC
Git commit ef57863a73c0e58b94f9f9f0aa1f4e918d98e79a by Nate Graham.
Committed on 01/01/2019 at 23:26.
Pushed by ngraham into branch 'master'.

Display error instead of silently failing when asked to create folder that already exists

Summary:
FIXED-IN: 5.54

Test Plan:
1. `mkdir ~/test`
2. In Dolphin, try to create `~/test`: folder not created
3. In Dolphin, try to create `~/test/foo`: folder created
4. In Dolphin, try to create `~/testo`: folder created

{F6481099}

Reviewers: #dolphin, elvisangelaccio, dfaure

Reviewed By: #dolphin, elvisangelaccio, dfaure

Subscribers: anthonyfieroni, dfaure, emateli, elvisangelaccio, Codezela, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D17617

M  +15   -10   src/filewidgets/knewfilemenu.cpp

https://commits.kde.org/kio/ef57863a73c0e58b94f9f9f0aa1f4e918d98e79a
Comment 6 Nate Graham 2019-01-09 18:12:22 UTC
*** Bug 355594 has been marked as a duplicate of this bug. ***