Display error instead of silently failing when asked to create folder that already exists

Summary:
BUG: 400423
FIXED-IN: 5.54

Test Plan:
1. `mkdir ~/test`
2. In Dolphin, try to create `~/test`: folder not created
3. In Dolphin, try to create `~/test/foo`: folder created
4. In Dolphin, try to create `~/testo`: folder created

{F6481099}

Reviewers: #dolphin, elvisangelaccio, dfaure

Reviewed By: #dolphin, elvisangelaccio, dfaure

Subscribers: anthonyfieroni, dfaure, emateli, elvisangelaccio, Codezela, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D17617